Move CSS in weekly-record-sheet.html to style.css

--- a/weekly-record-sheet.html
+++ b/weekly-record-sheet.html
@@ -3,263 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>週間活動記録</title>
-	<style>
-		/* --------
-		 * 印刷のための基本設定
-		 * -------- */
-		@page {
-			margin: 0;
-		}
-
-		body {
-			margin: 0;
-		}
-
-		.sheet {
-			/* シートの基本設定 */
-			margin: 0;
-		  overflow: hidden;
-		  position: relative;
-		  box-sizing: border-box;
-		  page-break-after: always;
-
-			/* 用紙サイズ：A4・縦向き・余白4辺とも10mm */
-			width: 210mm;
-			height: 296mm;
-			padding: 10mm;
-		}
-
-		/* For screen preview */
-		@media screen {
-			body {
-				background: #e0e0e0;
-			}
-
-			.sheet {
-				background: #ffffff;
-				box-shadow: 0 0.5mm 2mm rgba(0, 0, 0, 0.3);
-				margin: 5mm auto;
-			}
-		}
-
-		/* Fix for Chrome issue */
-		@media print {
-			body {
-				width: 210mm;
-			}
-		}
-
-		/* --------
-		 * プロジェクト固有の設定
-		 * -------- */
-		:root {
-			/* カラーパレット */
-			--main-color: #666655;
-			--accent-color: #C04040;
-			--sub-accent-color: #4040C0;
-
-			/* 各曜日ごとの文字色 */
-			--weekday-color: var(--main-color);
-			--holiday-color: var(--accent-color);
-			--monday-color: var(--weekday-color);
-			--tuesday-color: var(--weekday-color);
-			--wednesday-color: var(--weekday-color);
-			--thursday-color: var(--weekday-color);
-			--friday-color: var(--weekday-color);
-			--saturday-color: var(--sub-accent-color);
-			--sunday-color: var(--accent-color);
-		}
-
-		html {
-			font-family: "メイリオ";
-		}
-
-		.sheet {
-			background: #ffffff;
-			color: var(--main-color);
-		}
-
-		/* 各曜日を表すクラス */
-		.Monday {
-			color: var(--monday-color);
-		}
-
-		.Tuesday {
-			color: var(--tuesday-color);
-		}
-
-		.Wednesday {
-			color: var(--wednesday-color);
-		}
-
-		.Thursday {
-			color: var(--thursday-color);
-		}
-
-		.Friday {
-			color: var(--friday-color);
-		}
-
-		.Saturday {
-			color: var(--saturday-color);
-		}
-
-		.Sunday {
-			color: var(--sunday-color);
-		}
-
-		.Holyday {
-			color: var(--holiday-color);
-		}
-
-		/* 記入枠 */
-		.RecordTable {
-			width: 525pt;
-			border-collapse: collapse;
-			margin-left: auto;
-			margin-right: auto;
-			text-align: center;
-		}
-
-		.TimeCell {
-			display: flex;
-			justify-content: flex-start;
-			align-items: center;
-			line-height: 1.35;
-		}
-
-		.TimeCell__hour {
-			flex: 0 1 9pt;
-			font-size: 4pt;
-			font-weight: bold;
-		}
-
-		.TimeCell__minute {
-			flex: 0 1 9pt;
-			font-size: 3.6pt;
-			font-weight: normal;
-		}
-
-		.TimeCell__marker {
-			flex: 0 1 9pt;
-			font-size: 3.6pt;
-			font-weight: normal;
-			margin-left: auto;
-		}
-
-		.TimeLine {
-			border-left:solid var(--main-color) 0.5pt;
-			border-right:solid var(--main-color) 0.5pt;
-		}
-
-		.night {
-			background-color: #eeeeea;
-		}
-
-		td {
-			padding: 0;
-		}
-
-		thead > tr > .TimeLine {
-			border-top: solid var(--main-color) 0.5pt;
-			border-bottom: solid var(--main-color) 0.5pt;
-			line-height: 1;
-		}
-
-		tr:last-of-type > .TimeLine {
-			border-bottom: solid var(--main-color) 0.5pt;
-		}
-
-		/* 三つ折り用の目印 */
-		:root {
-			--FoldMark-width: 10pt;
-			--FoldMark-height: 10pt;
-		}
-
-		.FoldMark {
-			position: absolute;
-			font-size: 6pt;
-			display: block;
-			height: var(--FoldMark-height);
-			width: var(--FoldMark-width);
-		}
-
-		.FoldMark--top {
-			top: calc(104mm - calc(var(--FoldMark-height) / 2));
-		}
-
-		.FoldMark--bottom {
-			bottom: calc(104mm - calc(var(--FoldMark-height) / 2));
-		}
-
-		.FoldMark--left {
-			left: 5mm;
-		}
-
-		.FoldMark--right {
-			right: 5mm;
-		}
-
-		/* 見出しの凡例 */
-		.WeekDayName {
-			font-size: 6pt;
-			font-weight: normal;
-		}
-
-		.Date {
-			font-size: 9pt;
-			font-weight: bold;
-		}
-
-		.HolidayName {
-			color: var(--holiday-color);
-			font-family: "ＭＳ Ｐゴシック";
-			font-size: 6pt;
-			font-weight: normal;
-		}
-
-		.SolarTerm {
-			color: var(--main-color);
-			font-family: "ＭＳ Ｐゴシック";
-			font-size: 6pt;
-			font-weight: normal;
-		}
-
-		.PhaseOfTheMoon {
-			color: var(--main-color);
-			font-family: "Symbola";
-			font-size: 9pt;
-			font-weight: normal;
-		}
-
-		/* 記入対象とする期間 */
-		.TargetWeek {
-			width: 525pt;
-			display: flex;
-			justify-content: flex-start;
-			align-items: baseline;
-			margin-left: auto;
-			margin-right: auto;
-			margin-top: 10pt;
-		}
-
-		.TargetWeek--Japanese {
-			font-size: 9pt;
-			font-weight: bold;
-			margin: 0;
-		}
-
-		.TargetWeek--OrdinalDate {
-			font-size: 6pt;
-			margin: 0;
-		}
-
-		.TargetWeek--WeekNumber {
-			font-size:8pt;
-			margin: 0;
-			margin-left:auto;
-		}
-	</style>
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<div class="sheet">
