Fix typo: Holyday -> Holiday

--- a/weekly-record-sheet.html
+++ b/weekly-record-sheet.html
@@ -32,7 +32,7 @@
 						<span class="Date Monday">12/31</span>
 					</th>
 					<th class="TimeLine">
-						<span class="Date Holyday">1/1</span>
+						<span class="Date Holiday">1/1</span>
 						<span class="HolidayName">元日</span>
 					</th>
 					<th class="TimeLine">
